Сделал задачу согласно ТЗ

--- a/Deck.RESTFul/Deck.Api/appsettings.json
+++ b/Deck.RESTFul/Deck.Api/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DeckSettings": {
+    "Size": 52
+  },
+  "ShuffleSettings": {
+    "ShuffleAlgorithm": "Manual", // Manual, Fast, Optimal
+    "ShuffleCount": 5
+  },
   "AllowedHosts": "*"
 }
